    Bonaccorso <carnil@debian.org> (Closes: #823411):
    - WPS: Reject a Credential with invalid passphrase
    - Reject psk parameter set with invalid passphrase character
    - Remove newlines from wpa_supplicant config network output
    - Reject SET_CRED commands with newline characters in the string values
    - Reject SET commands with newline characters in the string values

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 19 Aug 2015 03:00:19 +0200

wpa (2.3-2.3) unstable; urgency=high

  * Non-maintainer upload.
  * Add patch to address CVE-2015-5310.
    CVE-2015-5310: wpa_supplicant unauthorized WNM Sleep Mode GTK control.
    (Closes: #804707)
  * Add patches to address CVE-2015-5314 and CVE-2015-5315.
    CVE-2015-5314: hostapd: EAP-pwd missing last fragment length validation.
    CVE-2015-5315: wpa_supplicant: EAP-pwd missing last fragment length
    validation. (Closes: #804708)
  * Add patch to address CVE-2015-5316.
    CVE-2015-5316: EAP-pwd peer error path failure on unexpected Confirm
    message. (Closes: #804710)

 -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 12 Nov 2015 20:54:12 +0100

wpa (2.3-2.2) unstable; urgency=high

  * Non-maintainer upload.
  * Add patch to address CVE-2015-4141.
    CVE-2015-4141: WPS UPnP vulnerability with HTTP chunked transfer
    encoding. (Closes: #787372)
  * Add patch to address CVE-2015-4142.
    CVE-2015-4142: Integer underflow in AP mode WMM Action frame processing.
    (Closes: #787373)
  * Add patches to address CVE-2015-414{3,4,5,6}
    CVE-2015-4143 CVE-2015-4144 CVE-2015-4145 CVE-2015-4146: EAP-pwd missing
    payload length validation. (Closes: #787371)
  * Add patch to address 2015-5 vulnerability.
    NFC: Fix payload length validation in NDEF record parser (Closes: #795740)
  * Thanks to Julian Wollrath <jwollrath@web.de> for the initial debdiff
    provided in #787371.

 -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 31 Oct 2015 14:13:50 +0100

wpa (2.3-2.1) unstable; urgency=medium
